upd spec's (#12)
* added policy spec's, updated sessions spec, refatoring sessions controller

* added gender to user

* upd users factory

* refactoring

* upd swagger

* upd swagger
